# py-goldsrc-demo

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: python-package.yml
demos/: 2008-de_inferno.dem  bootcamp_test.dem  bootcamp_test_short.dem
hl1demo/: BaseDemoParser.py  CS16DemoParser.py  HL25DemoParser.py  __main__.py  exceptions.py  parse_demo.py  utils.py
hl1demo/data_types/: __init__.py
hl1demo/macros/: __init__.py  base.py  empty_macros.py  netmsg.py
py_goldsrc_demo/: BaseDemoParser.py  CS16DemoParser.py  HL25DemoParser.py  __main__.py  exceptions.py  parse_demo.py  utils.py
py_goldsrc_demo/data_types/: __init__.py
py_goldsrc_demo/macros/: __init__.py  base.py  empty_macros.py
py_goldsrc_demo/tests/: test_basic.py
tests/: test_basic.py
