[project]
name = "py_goldsrc_demo"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = [
    { name = "Ivan Kuzmenko", email = "rodent@duck.com" },
]
description = "A library for parsing the GoldSrc demo files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rndtrash/py-goldsrc-demo"
Issues = "https://github.com/rndtrash/py-goldsrc-demo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"